--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-src/services/firebase.js
+src/services
 # Editor directories and files
 .idea
 .vscode
