--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-src/services
 # Editor directories and files
 .idea
 .vscode
@@ -12,3 +11,5 @@ src/services
 *.ntvs*
 *.njsproj
 *.sln
+# env file
+.env
