--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "begeta": "^0.1.19",
     "buefy": "^0.6.6",
+    "dotenv": "^6.0.0",
     "firebase": "^5.4.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
